k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lifeos-service
  labels:
    app: lifeos
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: lifeos
---
apiVersion: v1
kind: Service
metadata:
  name: lifeos-nodeport
  labels:
    app: lifeos
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
      name: http
  selector:
    app: lifeos
